# currybot

./: .gitignore  BUILDING.txt  README.md  RUNNING.txt  currybot.cabal  stack.yaml
src/: Main.hs  QueryHoogle.hs  RequestDoc.hs  SlackExtensions.hs
