name:                currybot
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/cville/currybot
license:             BSD3
license-file:        LICENSE
author:              The Haskell Book Club Meetup Group
maintainer:          #haskell Cville Slack
copyright:           2018 Cville Slack
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable currybot
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , slack-api ==0.12
                     , text ==1.2.2.1
                     , wreq
                     , lens
                     , lens-aeson
                     , aeson
                     , containers 
                     , bytestring
